💄 Declared registration/authentication related endpoints
