# handler/error.go
@@ -1,0 +1,5 @@
+package handler
+
+type HTTPError struct {
+	Details string `json:"details"`
+}
