# model/user.go
@@ -1,18 +1,19 @@
 package model
 
 type UserCreate struct {
-	FirstName  string `json:"first_name"`
-	LastName   string `json:"last_name"`
-	MiddleName string `json:"middle_name"`
-	Email      string `json:"email"`
+	FirstName  string `json:"first_name" example:"John"`
+	LastName   string `json:"last_name" example:"Doe"`
+	MiddleName string `json:"middle_name" example:"Jr."`
+	Email      string `json:"email" example:"johndoe@example.com"`
 }
 
 type UserGet struct {
-	FirstName  string `json:"first_name"`
-	LastName   string `json:"last_name"`
-	MiddleName string `json:"middle_name"`
-	Email      string `json:"email"`
-	IsActive   bool   `json:"is_active"`
+	UserID     int64  `json:"user_id" example:"1"`
+	FirstName  string `json:"first_name" example:"John"`
+	LastName   string `json:"last_name" example:"Doe"`
+	MiddleName string `json:"middle_name" example:"Jr."`
+	Email      string `json:"email" example:"johndoe@example.com"`
+	IsActive   bool   `json:"is_active" example:"true"`
 }
 
 type User struct {
